Card layout bug fixed/ all cards render

--- a/css/style.css
+++ b/css/style.css
@@ -94,8 +94,11 @@ section {
     /* border: 2px solid red; */
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    /* justify-content: center; */
     align-items: center;
+    height: 50%;
+    padding: 0px; 
+    margin: 0px;
     /* flex-direction: row; */
 
 }
@@ -122,9 +125,32 @@ div {
     border-radius: 3px;
     position: relative;
     bottom: 10vh;
-    height: 40px;
+    height: 600px;
     padding: 0 10px;
 }
 
 /* ************** CARD STYLING ************ */
+#cards {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
 
+}
+
+
+.card-image {
+    /* border: 2px solid red; */
+    width: 15vw;
+    height: auto;
+    /* margin: 0px; */
+    padding: 10px;
+}
+
+.card-heading {
+    /* border: 2px solid red; */
+    font-size: em;
+    margin-top: 200px;
+}
+sl-card body {
+
+}
